tests/compile/derive-u8.stderr
error[E0277]: the trait bound `std::option::Option<u8>: conflate::Merge` is not satisfied
 --> $DIR/derive-u8.rs:8:5
  |
8 |     field1: Option<u8>,
  |     ^^^^^^ the trait `conflate::Merge` is not implemented for `std::option::Option<u8>`
  |
  = note: required by `conflate::Merge::merge`

error[E0277]: the trait bound `u8: conflate::Merge` is not satisfied
 --> $DIR/derive-u8.rs:9:5
  |
9 |     field2: u8,
  |     ^^^^^^ the trait `conflate::Merge` is not implemented for `u8`
  |
  = note: required by `conflate::Merge::merge`
